examples/test/testpolicy359.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy359
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key9: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value1
          key23: value29
          key35: value44
      podSelector:
        matchLabels:
          key5: value9
